--- a/MD02-HTMLeCSS3/Flexbox/2-flex-wrap.html
+++ b/MD02-HTMLeCSS3/Flexbox/2-flex-wrap.html
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <h1>no wrap</h1>
+    <p>nowrap</p>
     <div class="flex-container nowrap">
         <div class="item blue">1</div>
         <div class="item green">2</div>
@@ -57,6 +57,7 @@
         <div class="item blue">4</div>
     </div>
 
+    <p>wrap</p>
     <div class="flex-container wrap">
         <div class="item blue">1</div>
         <div class="item green">2</div>
@@ -64,6 +65,7 @@
         <div class="item blue">4</div>
     </div>
 
+    <p>wrap-reverse</p>
     <div class="flex-container wrap-reverse">
         <div class="item blue">1</div>
         <div class="item green">2</div>
